Address various IDE inspections